JAVA-2523: Replace use of deprecated Integer(int) constructor with Integer.valueOf(int)