@@ -264,7 +264,7 @@ public class ClusterDescriptionTest {
                         .address(new ServerAddress("loc:27018"))
                         .build()
         ));
-        assertEquals(new Integer(5), description.getLogicalSessionTimeoutMinutes());
+        assertEquals(Integer.valueOf(5), description.getLogicalSessionTimeoutMinutes());
 
         description = new ClusterDescription(MULTIPLE, REPLICA_SET, asList(
                 builder().state(CONNECTED)
@@ -281,7 +281,7 @@ public class ClusterDescriptionTest {
                         .address(new ServerAddress("loc:27017"))
                         .build()
         ));
-        assertEquals(new Integer(3), description.getLogicalSessionTimeoutMinutes());
+        assertEquals(Integer.valueOf(3), description.getLogicalSessionTimeoutMinutes());
 
         description = new ClusterDescription(MULTIPLE, REPLICA_SET, asList(
                 builder().state(CONNECTED)
@@ -298,7 +298,7 @@ public class ClusterDescriptionTest {
                         .address(new ServerAddress("loc:27017"))
                         .build()
         ));
-        assertEquals(new Integer(3), description.getLogicalSessionTimeoutMinutes());
+        assertEquals(Integer.valueOf(3), description.getLogicalSessionTimeoutMinutes());
     }
 
     @Test
